Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/BadAccess03.out
BadAccess03.java:13:29: compiler.err.cant.ref.non.effectively.final.var: k, (compiler.misc.lambda)
1 error
